--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
 <h1>BagBrownie</h1>
 <h2>Informações</h2>
-    <p>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor</p>
+    <p>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor do que a sacola normal de plástico
+    </p>
   </body>
 </html>
