--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
   <head>
@@ -8,7 +9,8 @@
   <body>
 <h1>BagBrownie</h1>
 <h2>Informações</h2>
-    <p>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor do que a sacola normal de plástico
+    <p>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor do 
+      que a sacola normal de plástico, cabe várias coisas é resistente, tem diversos tamanhos, é lavável e tem vários temas e desenhos
     </p>
   </body>
 </html>
