--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <h1>BagBrownie</h1>
 <h2>Informações</h2>
     <p>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor do 
-      que a sacola normal de plástico, cabe várias coisas é resistente, tem diversos tamanhos, é lavável e tem vários temas e desenhos
+      que a sacola normal de plástico, cabe várias coisas é resistente, tem diversos tamanhos, é lavável e tem 
+      vários temas e desenhos
     </p>
+    <h2>TEMA: </h2>
+    <p>Personages, Filmes, Desenhos, Religiões, Fauna e Flora</p>
+    <h2>Utilidades:</h2>
+    <p>Essa resistência que os materiais possuem colaboram para aumentar a vida útil da sacola e propiciam um 
+      acabamento mais bem feito se comparado a sacolas comuns. Cada sacola ecológica é pensada para aliar 
+      durabilidade, beleza e praticidade.</p>
   </body>
 </html>
