--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
     <p>Essa resistência que os materiais possuem colaboram para aumentar a vida útil da sacola e propiciam um 
       acabamento mais bem feito se comparado a sacolas comuns. Cada sacola ecológica é pensada para aliar 
       durabilidade, beleza e praticidade.</p>
+    <h2>INSTAGRAM:</h2>
+    <p>@_bagbrownie_</p>
+    <h2>Fundadores:</h2>
+<p> Gabriela, Ian, Fernanda</p>
   </body>
 </html>
