--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   </head>
   <body>
 <h1>BagBrownie</h1>
-<h2>Informações</h2>
-    <p>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor do 
+<h1 style="background-color:DodgerBlue;">Informações:</h2>
+    <p><b>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor do 
       que a sacola normal de plástico, cabe várias coisas é resistente, tem diversos tamanhos, é lavável e tem 
-      vários temas e desenhos
+      vários temas e desenhos</b>  
     </p>
-    <h2>TEMA: </h2>
-    <p>Personages, Filmes, Desenhos, Religiões, Fauna e Flora</p>
+   <h2 style="background-color:DodgerBlue;">TEMA: </h2>
+    <p><b>Personages, Filmes, Desenhos, Religiões, Fauna e Flora</b></p>
     <h2>Utilidades:</h2>
-    <p>Essa resistência que os materiais possuem colaboram para aumentar a vida útil da sacola e propiciam um 
+    <p><b>Essa resistência que os materiais possuem colaboram para aumentar a vida útil da sacola e propiciam um 
       acabamento mais bem feito se comparado a sacolas comuns. Cada sacola ecológica é pensada para aliar 
-      durabilidade, beleza e praticidade.</p>
-    <h2>INSTAGRAM:</h2>
-    <p>@_bagbrownie_</p>
+      durabilidade, beleza e praticidade.</b></p>
+    <h2 style="background-color:DodgerBlue;">INSTAGRAM:</h2>
+    <p><b>@_bagbrownie_</b></p>
     <h2>Fundadores:</h2>
-<p> Gabriela, Ian, Fernanda</p>
+<p><b> Gabriela, Ian, Fernanda</b></p>
   </body>
 </html>
