--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>BagBrownie</title>
   </head>
   <body>
+    background-color: lightblue;
 <h1>BagBrownie</h1>
 <h2 style="background-color:DodgerBlue;">Informações:</h2>
     <p><b>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor do 
