--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 
 <!doctype html>
 <html>
+<head>
+<style>
+body {
+  background-color: lightblue;
+}
+  <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>BagBrownie</title>
   </head>
   <body>
-    {background-color: lightblue;}
 <h1>BagBrownie</h1>
 <h2 style="background-color:DodgerBlue;">Informações:</h2>
     <p><b>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor do 
