--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 
 <!doctype html>
+<html>
+<head>
+<style>
+body {
+  background-color: lightblue;
+}
+</style>
+</head>
+<body>
   <html>
   <head>
     <meta charset="utf-8" />
