--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
     </p>
    <h2 style="background-color:DodgerBlue;">TEMA: </h2>
     <p><b>Personages, Filmes, Desenhos, Religiões, Fauna e Flora</b></p>
-    <h2>Utilidades:</h2>
+    <h2 style="background-color:DodgerBlue;">Utilidades:</h2>
     <p><b>Essa resistência que os materiais possuem colaboram para aumentar a vida útil da sacola e propiciam um 
       acabamento mais bem feito se comparado a sacolas comuns. Cada sacola ecológica é pensada para aliar 
       durabilidade, beleza e praticidade.</b></p>
