--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ body {
     </p>
    <h2 style="background-color:DodgerBlue;">TEMA: </h2>
     <p><b>Personages, Filmes, Desenhos, Religiões, Fauna e Flora</b></p>
+    <img src="1730902740815.jpg">
     
     <h2 style="background-color:DodgerBlue;"> UTILIDADES:</h2>
     <p><b>Essa resistência que os materiais possuem colaboram para aumentar a vida útil da sacola e propiciam um 
