--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
 <style>
 body {
-  background-color: lightblue;
+  background-color: pink;
+}
+
+@media screen and (min-width: 480px) {
+  body {
+    background-color: lightblue;
+  }
 }
 </style>
 </head>
