--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
       vários temas e desenhos</b>  
     </p>
    <h2 style="background-color:DodgerBlue;">TEMA: </h2>
-    <p><b>Personages, Filmes, Desenhos, Religiões, Fauna e Flora</b></p>
+    <p><i>Personages, Filmes, Desenhos, Religiões, Fauna e Flora</i></p>
     <img src=1730902740815.jpg style="max-width: 45%; height: auto;">
     <a href="pagina2.html">Página 2</a>
     <h2 style="background-color:DodgerBlue;"> UTILIDADES:</h2>
