--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
       acabamento mais bem feito se comparado a sacolas comuns. Cada sacola ecológica é pensada para aliar 
       durabilidade, beleza e praticidade.</b></p>
     <h2 style="background-color:DodgerBlue;">INSTAGRAM:</h2>
-    <p><b>@_bagbrownie_</b></p>
+   <a href="pagina2.html">@_bagbrownie_</a> 
     <h2>Fundadores:</h2>
 <p><b> Gabriela, Ian, Fernanda</b></p>
   </body>
