--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@ body {
    <h2 style="background-color:DodgerBlue;">TEMA: </h2>
     <p><em>Personagens, Filmes, Desenhos, Religiões, Fauna e Flora</em></p>
     <img src=1730902740815.jpg style="max-width: 45%; height: auto;">
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+/* unvisited link */
+a:link {
+  color: red;
+}
+
+/* visited link */
+a:visited {
+  color: green;
+}
+
 /* mouse over link */
 a:hover {
   color: hotpink;
@@ -39,7 +53,6 @@ a:hover {
 /* selected link */
 a:active {
   color: blue;
-}
     <p><b><a href="default.asp" target="_blank">https://reidaecobag.com.br/?gad_source=1&gclid=EAIaIQobChMIkuWyrsbUiQMVyFVIAB1fKgdPEAAYASAAEgI5APD_BwE</a></b></p>
     <h2 style="background-color:DodgerBlue;"> UTILIDADES:</h2>
     <p><b>Essa resistência que os materiais possuem colaboram para aumentar a vida útil da sacola e propiciam um 
