--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@ body {
        </p>
     <h2 style="background-color:DodgerBlue;">TEMA: </h2>
     <p><em>Personagens, Filmes, Desenhos, Religiões, Fauna e Flora</em></p>
-    <img src=1730902740815.jpg style="max-width: 45%; height: auto;">
-    <p><b><a href="pagina2.html" target="_blank">https://reidaecobag.com.br/?gad_source=1&gclid=EAIaIQobChMIkuWyrsbUiQMVyFVIAB1fKgdPEAAYASAAEgI5APD_BwE</a></b></p>
-  
+    <img src=1730902740815.jpg style="max-width: 45%; height: auto;"> 
+     <a href="pagina2.html">@_bagbrownie_</a>
+        <h2 style="background-color:DodgerBlue;">TEMA: </h2>
+    
     <h2 style="background-color:DodgerBlue;"> UTILIDADES:</h2>
-    <p><b>Essa resistência que os materiais possuem colaboram para aumentar a vida útil da sacola e propiciam um 
+     <p><b>Essa resistência que os materiais possuem colaboram para aumentar a vida útil da sacola e propiciam um 
       acabamento mais bem feito se comparado a sacolas comuns. Cada sacola ecológica é pensada para aliar 
       durabilidade, beleza e praticidade.</b></p>
+    
     <h2 style="background-color:DodgerBlue;">INSTAGRAM:</h2>
    <a href="pagina2.html">@_bagbrownie_</a> 
-    <h2>Fundadores:</h2>
+      <h2 style="background-color:DodgerBlue;"> FUNDADORES </h2>
 <p><b> Gabriela, Ian, Fernanda</b></p>
   </body>
 </html>
