--- a/index.html
+++ b/index.html
@@ -38,7 +38,23 @@ body {
      <p><b>Essa resistência que os materiais possuem colaboram para aumentar a vida útil da sacola e propiciam um 
       acabamento mais bem feito se comparado a sacolas comuns. Cada sacola ecológica é pensada para aliar 
       durabilidade, beleza e praticidade.</b></p>
-    
+    <html>
+<head>
+<style>
+a {
+  color: hotpink;
+}
+</style>
+</head>
+<body>
+
+<h2>Style a link with a color</h2>
+
+<p><b><a href="default.asp" target="_blank">This is a link</a></b></p>
+
+</body>
+</html>
+
     <h2 style="background-color:DodgerBlue;">INSTAGRAM:</h2>
    <a href="pagina2.html">@_bagbrownie_</a> 
       <h2 style="background-color:DodgerBlue;"> FUNDADORES </h2>
