--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@ body {
     <img src=1730902740815.jpg style="max-width: 45%; height: auto;"> 
      <a href="pagina2.html">@_bagbrownie_</a>
         <h2 style="background-color:DodgerBlue;">TEMA: </h2>
-    
+    Religião, Personagens, Filmes Series, Flores, Natureza entre outros.
     <h2 style="background-color:DodgerBlue;"> UTILIDADES:</h2>
      <p><b>Essa resistência que os materiais possuem colaboram para aumentar a vida útil da sacola e propiciam um 
       acabamento mais bem feito se comparado a sacolas comuns. Cada sacola ecológica é pensada para aliar 
       durabilidade, beleza e praticidade.</b></p>
-    <html>
+
+    <h2 style="background-color:DodgerBlue;">INSTAGRAM:</h2>
+     <html>
 <head>
 <style>
 a {
@@ -48,15 +50,11 @@ a {
 </head>
 <body>
 
-<h2>Style a link with a color</h2>
-
 <p><b><a href="default.asp" target="_blank">https://reidaecobag.com.br/</a></b></p>
 
 </body>
-</html>
-
-    <h2 style="background-color:DodgerBlue;">INSTAGRAM:</h2>
-   <a href="pagina2.html">@_bagbrownie_</a> 
+</html
+    
       <h2 style="background-color:DodgerBlue;"> FUNDADORES </h2>
 <p><b> Gabriela, Ian, Fernanda</b></p>
   </body>
