--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ a {
 </style>
 </head>
 <body>
-<p><b><a href="default.asp" target="_blank">https://reidaecobag.com.br/</a></b></p>
+<a href="instagram">INSTAGRAM</a>
 </body>
 </html
     
