--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a {
 </body>
 </html
     
-      <h2 style="background-color:DodgerBlue;"> FUNDADORES </h2>
+      <h2 style="background-color:DodgerBlue;"> INSTAGRAM </h2>
 <p><b> Gabriela, Ian, Fernanda</b></p>
   </body>
 </html>
