--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
     <h2 style="background-color:DodgerBlue;">TEMA: </h2>
     <p><em>Personagens, Filmes, Desenhos, Religiões, Fauna e Flora</em></p>
     <img src=1730902740815.jpg style="max-width: 45%; height: auto;"> 
-     <a href="pagina2.html">@_bagbrownie_</a>
+     <a href="https://www.instagram.com/_bagbrownie_?igsh=MWUxMm41dXhmbmN0bg==">@_bagbrownie_</a>
         <h2 style="background-color:DodgerBlue;">TEMA: </h2>
     Religião, Personagens, Filmes Series, Flores, Natureza entre outros.
     <h2 style="background-color:DodgerBlue;"> UTILIDADES:</h2>
