--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
     <title>BagBrownie</title>
   </head>
   <body>
-<h1>BagBrownie</h1>
+<h1>BagBrowniea</h1>
 <h2 style="background-color:DodgerBlue;">Informações:</h2>
     <p><b>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor do 
       que a sacola normal de plástico, cabe várias coisas é resistente, tem diversos tamanhos, é lavável e tem 
