--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@ a {
 </style>
 </head>
 <body>
-<li style="background-color:pink;">
-<a href="instagram.html">INSTAGRAM</a></li>
+<a href="instagram.html"></a>INSTAGRAM
 </body>
 </html
     
