--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ a {
 </style>
 </head>
 <body>
-<a href="instagram.html"></a>INSTAGRAM
+<li<a href="instagram.html"></a></li>
 </body>
 </html
     
