--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ a {
 </style>
 </head>
 <body>
-<li<a href="instagram.html"></a></li>
+<li<a href="instagram.html">INSTAGRAM</a></li>
 </body>
 </html
 
