--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ a {
 </style>
 </head>
 
-<li<a href="instagram.html">INSTAGRAM</a></li>
-<p><b> Gabriela, Ian, Fernanda</b></p>
+<a href="instagram.html">INSTAGRAM</a>
 </body>
 </html>
+<p><b> Gabriela, Ian, Fernanda</b></p>
