--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ a {
 }
 </style>
 </head>
-
-<a href="instagram.html">INSTAGRAM</a>
+<li
+<a href="instagram.html">INSTAGRAM</a></li>
 </body>
 </html>
 <p><b> Gabriela, Ian, Fernanda</b></p>
