--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ a {
 </style>
 </head>
 <li
-<a href="instagram.html">INSTAGRAM</a></li>
+<a> href="instagram.html">INSTAGRAM</a></li>
 </body>
 </html>
 <p><b> Gabriela, Ian, Fernanda</b></p>
