--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@ body {
 a {
   color: hotpink;
 }
+  h1{
+p.groove {border-style: groove;}
+style="background-color:DodgerBlue;">
+    
+  }
 </style>
   <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>BagBrownie</title>
 </head>
 <body>
-<h1>BagBrowniea</h1>
+<h1>BagBrownie</h1>
 <h2 style="background-color:DodgerBlue;">Informações:</h2>
     <p><b>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor do 
       que a sacola normal de plástico, cabe várias coisas é resistente, tem diversos tamanhos, é lavável e tem 
