--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ a {
   color: hotpink;
 }
   h1{
-p.groove {border-style: groove;}
-style="background-color:DodgerBlue;">
-    
+border-style: groove;
+color: DodgerBlue;
+font-size: 15px;    
   }
 </style>
   <meta charset="utf-8" />
