--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ a {
   h1{
 border-style: groove;
 color: DodgerBlue;
-font-size: 15px;    
+font-size: 60px;
+border-radius: 5px;
+    border: 2px solid red;
   }
 </style>
   <meta charset="utf-8" />
