--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ border-style: groove;
 color: DodgerBlue;
 font-size: 60px;
 border-radius: 5px;
-    border: 2px solid red;
+    border: 4px solid red;
   }
 </style>
   <meta charset="utf-8" />
@@ -28,7 +28,7 @@ border-radius: 5px;
     <title>BagBrownie</title>
 </head>
 <body>
-<h1>BagBrownie</h1>
+<h1><center>BagBrownie</center></h1>
 <h2 style="background-color:DodgerBlue;">Informações:</h2>
     <p><b>A sacola ecobag é muito eficiente, prática e como o próprio nome ja diz ela é ecológica muito melhor do 
       que a sacola normal de plástico, cabe várias coisas é resistente, tem diversos tamanhos, é lavável e tem 
