--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@ font-size: 60px;
 border-radius: 5px;
     border: 4px solid red;
   }
+  img.hover {
+  width: 100%;
+  height: auto;
+}
 </style>
   <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
